--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -108,29 +108,5 @@
     </div>
     
     <!-- FOOTER -->
-    <!-- DESIGNED BY -->
-    <footer class="container-fluid">
-        <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h7>ABOUT US</h7>
-                <p>About</p>
-                <p>Become and Affliliate</p>
-            </div>
-
-            <div class="col-md-4">
-                <h7>INFORMATION</h7>
-                <p>Delivery</p>
-                <p>Terms and Conditions</p>
-            </div>
-
-            <div class="col-md-4">
-                <h7>HELP</h7>
-                <p>Track My Order</p>
-                <p>Size Guide</p>
-            </div>
-        </div>
-        </div>
-        <p class="copyright">Copyright @2018 Designed by: </p>
-    </footer>
+    {{> footer}
 
